--- a/gb/23/8/28/n14062610.md
+++ b/gb/23/8/28/n14062610.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>酒驾惯犯欠税失联  共有房地被法拍兄先买回</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14062612-632082-600x400.jpg" />
-<h6>现场执行。（法务部行政执行署嘉义分署提供）
-</h6>
+<h6>现场执行。（法务部行政执行署嘉义分署提供）</h6>
 <hr>
 <p>【大纪元2023年08月28日讯】（大纪元记者李撷璎台湾嘉义报导）嘉义县太保市曾姓男子是酒驾惯犯，之前即因酒驾不能安全驾驶于104年、107年分别判刑3月、4月入狱服刑。惟仍不知悔改，于109年5月20日中午12时54分许酒后骑乘机车，行经嘉义县县道168号（嘉朴公路）22.5公里处为警拦检，发现曾男之前已因酒驾被吊销驾照，当场又拒绝接受酒精浓度测试。曾男无照酒驾又拒绝检测，因此被重罚18万元罚锾。曾男除了酒驾罚锾外还有欠缴地价税、房屋税及其他交通违规罚锾等共计欠缴42万余元，之后被移送行政执行署嘉义分署强制执行。</p>
 <figure id="14062611" aria-describedby="caption-14062611" style="width: 453px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14062611-632081-450x705.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class="" src="https://i.epochtimes.com/assets/uploads/2023/08/id14062611-632081-450x705.jpg" alt="现场执行。" width="453" b="709" /></a><figcaption id="caption-14062611" class="wp-caption-text">现场执行。（法务部行政执行署嘉义分署提供）</figcaption></figure>
@@ -14,39 +13,32 @@
 <p>酒驾害人害己，更是会连累亲人受累。嘉义分署持续强力执行酒驾裁罚案件。针对酒驾违规案件，会以扣押存款、薪水、扣押保险契约债权、查扣车辆、查封土地房屋各种执行手段，让酒驾者为他的害人害己行为付出代价。</p>
 <p>责任编辑：筱珮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/11/n14052486.md#1">酒驾肇事者涉嫌酿一死四伤 逃逸后被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/14/n14053902.md#1">401高速高速逆行导致车祸 司机涉酒驾被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/15/n14054009.md#1">返校季谨慎开车 防止学生因交通事故伤亡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/18/n14056283.md#1">还记得亚省政府拍卖的烤肉服装吗？?谁赢得了它？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/21/n14058208.md#1">花莲男酒驾闯平交道 直撞太鲁阁号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/25/n14061162.md#1">酒驾拒测罚18万 花莲分署查封不动产缴清</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403623.md#1">高压容器&amp;废电池 独立回收保护你我</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403580.md#1">黄敏惠参加经国、精忠新城元旦升旗 迎新年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403561.md#1">12岁以上接种新冠疫苗 公费流感全民可接种</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403373.md#1">嘉市监理站为民服务 2025年1月高龄下乡换照</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/2/n11494526.md#1" target="_blank">英国女士秘鲁探险 偶遇大法后改变人生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/30/n10600549.md#1" target="_blank">文革中自杀的中共省委书记阎红彦</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14398541.md#1">一个台北女生在中国鞋厂工作的回忆录</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393481.md#1">圣诞传奇：《是的 维吉尼亚 有圣诞老人》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399500.md#1">【未解之谜】被封400年 四川最神秘旅游禁地：迷魂凼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/4/n10761555.md#1">宗泽“宗爷爷”：大宋的铁血老将</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393484.md#1">【杨延昭传奇】杨宗保初遇穆桂英（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/25/n14397456.md#1">【直播】新唐人“2025跨年缤纷夜”特别节目</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403488.md#1">【马克时空】中国年底披露2款新飞机 是六代机吗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402148.md#1">【时事金扫描】同日三大客机空难 韩国空难解密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/24/n14396735.md#1">当前Costco最热卖的8种商品 含美味虾饺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388412.md#1">2024最热销六款日本车 CR-V和RAV4均上榜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400931.md#1">韩国空难179死 黑匣子找到 全国哀悼7天</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14402017.md#1">赵露思病倒风波延烧 剧组“阴阳剧本”透隐情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401984.md#1">基努·李维家中曾遭窃 一年后在智利寻回名表</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402450.md#1">瑞莎岁末报喜 带队赴韩比赛抱回12奖 女儿首摘金</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401508.md#1">2024年全球前十大电影票房排名 九部是续集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402373.md#1">MAMAMOO辉人台中跨年 彩排后向粉丝诉感谢</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400671.md#1">惊人研究：单一茶包可释放数亿颗塑胶微粒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14400184.md#1">厨房必备珍宝“食盐”妙用多 别再花冤枉钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/26/n14397981.md#1">喝对咖啡护肝 过量失智 加它稳定血压血糖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/30/n14401399.md#1">为什么洋芋片的包装中有那么多气体？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/29/n14400372.md#1">空气炸锅煮喷香米饭 善用三技巧省心省力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/28/n14062610.htm">酒驾惯犯欠税失联  共有房地被法拍兄先买回</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062610.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
